--- a/styles.css
+++ b/styles.css
@@ -27,3 +27,22 @@ body {
 }
 
 
+#monsterStats {
+    background: #c70d0d;
+    color: #ffffff;
+    border: 1px solid #0a0a23;
+    padding: 5px;
+    display: none;
+}
+
+.stat {
+    padding-right: 10px;
+}
+
+button {
+    cursor: pointer;
+    color: #0a0a23;
+    background-color: #feac32;
+    background-image: linear-gradient(#fecc4c, #ffac33);
+    border: 3px solid #feac32;
+}
